# SLBAF-Net

./: README.md
conf/: calibration_image.yaml
modules/yolov5-dual/: CMakeLists.txt  TIF_algorithm.py  detect.py  dualdetectchange.py  package.xml  train.py  val.py  visdronetoyolo.py
modules/yolov5-dual/data/: dual.yaml  dual_VOC.yaml  dualuav.yaml  split_train_val.py  voc_label.py  voc_label2.py
modules/yolov5-dual/data/ImageSets/Main/: trainval.txt  val.txt
modules/yolov5-dual/data/hyps/: hyp.scratch-high.yaml
modules/yolov5-dual/models/: attentionuav7.yaml  common.py  experimental.py  gradcam.py  yolo.py  yolov5_object_detector.py  yolov5s.yaml
modules/yolov5-dual/runs/train/car1/: dualyolov5s.yaml  events.out.tfevents.1666189203.server-Host.3337.0  opt.yaml  results.csv
modules/yolov5-dual/utils/: activations.py  augmentations.py  autoanchor.py  datasets.py  general.py  loss.py  plots.py  torch_utils.py
modules/yolov5-dual/utils/loggers/: __init__.py
scripts/: demo_dual_modal.py  functions.py  mono_estimator.py  yolov5_detector.py  yolov5_dualdetector.py
